Update API field names
