# src/gen/swagger/com/sonicle/webtop/contacts/swagger/v2/model/ApiCategory.java
@@ -21,13 +21,13 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
  **/
 @ApiModel(description = "Represent a category that contains contacts.")
 @JsonTypeName("Category")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2025-02-06T10:04:09.242+01:00[Europe/Berlin]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2025-05-30T11:31:06.563+02:00[Europe/Berlin]")
 public class ApiCategory extends ApiCategoryBase  {
   private @Valid String id;
   private @Valid String etag;
   private @Valid String itemsETag;
-  private @Valid String createdOn;
-  private @Valid String updatedOn;
+  private @Valid String createdAt;
+  private @Valid String updatedAt;
   private @Valid ApiOwnerInfo owner;
 
   /**
@@ -93,41 +93,41 @@ public class ApiCategory extends ApiCategoryBase  {
   /**
    * Creation timestamp in ISO 8601 format and UTC time.
    **/
-  public ApiCategory createdOn(String createdOn) {
-    this.createdOn = createdOn;
+  public ApiCategory createdAt(String createdAt) {
+    this.createdAt = createdAt;
     return this;
   }
 
   
   @ApiModelProperty(value = "Creation timestamp in ISO 8601 format and UTC time.")
-  @JsonProperty("createdOn")
-  public String getCreatedOn() {
-    return createdOn;
+  @JsonProperty("createdAt")
+  public String getCreatedAt() {
+    return createdAt;
   }
 
-  @JsonProperty("createdOn")
-  public void setCreatedOn(String createdOn) {
-    this.createdOn = createdOn;
+  @JsonProperty("createdAt")
+  public void setCreatedAt(String createdAt) {
+    this.createdAt = createdAt;
   }
 
   /**
    * Modification timestamp in ISO 8601 format and UTC time.
    **/
-  public ApiCategory updatedOn(String updatedOn) {
-    this.updatedOn = updatedOn;
+  public ApiCategory updatedAt(String updatedAt) {
+    this.updatedAt = updatedAt;
     return this;
   }
 
   
   @ApiModelProperty(value = "Modification timestamp in ISO 8601 format and UTC time.")
-  @JsonProperty("updatedOn")
-  public String getUpdatedOn() {
-    return updatedOn;
+  @JsonProperty("updatedAt")
+  public String getUpdatedAt() {
+    return updatedAt;
   }
 
-  @JsonProperty("updatedOn")
-  public void setUpdatedOn(String updatedOn) {
-    this.updatedOn = updatedOn;
+  @JsonProperty("updatedAt")
+  public void setUpdatedAt(String updatedAt) {
+    this.updatedAt = updatedAt;
   }
 
   /**
@@ -162,15 +162,15 @@ public class ApiCategory extends ApiCategoryBase  {
     return Objects.equals(this.id, category.id) &&
         Objects.equals(this.etag, category.etag) &&
         Objects.equals(this.itemsETag, category.itemsETag) &&
-        Objects.equals(this.createdOn, category.createdOn) &&
-        Objects.equals(this.updatedOn, category.updatedOn) &&
+        Objects.equals(this.createdAt, category.createdAt) &&
+        Objects.equals(this.updatedAt, category.updatedAt) &&
         Objects.equals(this.owner, category.owner) &&
         super.equals(o);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, etag, itemsETag, createdOn, updatedOn, owner, super.hashCode());
+    return Objects.hash(id, etag, itemsETag, createdAt, updatedAt, owner, super.hashCode());
   }
 
   @Override
@@ -181,8 +181,8 @@ public class ApiCategory extends ApiCategoryBase  {
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    etag: ").append(toIndentedString(etag)).append("\n");
     sb.append("    itemsETag: ").append(toIndentedString(itemsETag)).append("\n");
-    sb.append("    createdOn: ").append(toIndentedString(createdOn)).append("\n");
-    sb.append("    updatedOn: ").append(toIndentedString(updatedOn)).append("\n");
+    sb.append("    createdAt: ").append(toIndentedString(createdAt)).append("\n");
+    sb.append("    updatedAt: ").append(toIndentedString(updatedAt)).append("\n");
     sb.append("    owner: ").append(toIndentedString(owner)).append("\n");
     sb.append("}");
     return sb.toString();
